(feat): Complete resume updates

--- a/resume.tex
+++ b/resume.tex
@@ -16,7 +16,7 @@
 \name{Madhu}{Krishnan}
 \position{Software Engineer}{Backend \& Distributed Systems}
 
-\homepage{https://www.madhuvk.com}
+\homepage{www.madhuvk.com}
 \email{ping@madhuvk.com}
 \linkedin{madhuvk}
 \github{madhuvk}
