--- a/sections/experience.tex
+++ b/sections/experience.tex
@@ -5,11 +5,11 @@
     {Software Engineer}
     {Uptrust}
     {\textbf{Languages \& Technologies:} TypeScript, CoffeeScript, GraphQL, Firebase, React, Twilio, AWS Postgres, CircleCI}
-    {Apr. 2021 - Jun. 2022}
+    {2021 - 2022}
     {
       \begin{cvitems}
-        \item {Reduced customer attrition by leading technical execution on key product features - announcements, recurring events, and multiple staff members.}
-        \item {Unlocked customer growth by improving system efficiency, increasing messaging throughput, and optimizing cross-service communication.}
+        \item {Reduced customer attrition by leading technical execution on product features - announcements, recurring events, and multiple staff members.}
+        \item {Unlocked customer growth by improving system efficiency, increasing messaging throughput, and reducing cross-service communication.}
         \item {Enhanced messaging service quality by introducing rate-limiting, at-least-once queue delivery, and backpressure.}
         \item {Improved failure incidence and detection by implementing automatic consumer retries, queue alerts, and structured logging.}
       \end{cvitems}
@@ -19,14 +19,14 @@
     {Salesforce}
     {\textbf{Languages \& Technologies:} Java, Python, Go, gRPC, Solr, EKS, Terraform, PL/SQL, Spinnaker, Jenkins}
     {Senior Software Engineer}
-    {Mar. 2017 - Apr. 2021}
+    {2017 - 2021}
     {Intern (Core Search)}
-    {Jun. 2016 - Sep. 2016}
+    {2016}
     {Intern (Service Cloud)}
-    {Jun. 2015 - Sep. 2015}
+    {2015}
     {
       \begin{cvitems}
-        \item {Attained optimistic timelines for Hyperforce, a public cloud rearchitecture, by proposing and leading a project to remove a major development bottleneck. Presented the design and results to the CTO and Principal Architects.}
+        \item {Helped achieve optimistic timelines for the public cloud rearchitecture, Hyperforce, by successfully leading a project to eliminate development bottlenecks. Presented the design and results to the CTO and Principal Architects for wider company adoption.}
         \item {Reached performance targets for Hyperforce and real-time search suggestions by optimizing backend fanout to reduce tail latencies.}
         \item {Improved CTR and Precision@K search metrics in Hyperforce by owning and deploying the ML model execution engine.}
         \item {Shortened the development lifecycle by implementing key features for feature-toggling, A/B experimentation, and ML model deployments.}
@@ -37,7 +37,7 @@
     {Software Engineering Intern}
     {Annai Systems}
     {\textbf{Languages \& Technologies:} C/C++, Python, Bash, Make/CMake, OpenSSL EVP, UDP, UDT, NAT Traversal}
-    {June. 2014 - Sep. 2014}
+    {2014}
     {
       \begin{cvitems}
         \item {Enabled secure transport of genome sequences by encryping UDT, a WAN-optimized application-layer protocol.}
