--- a/sections/projects.tex
+++ b/sections/projects.tex
@@ -5,31 +5,21 @@
 \begin{cvhonors}
   \cvhonor
     {Coolest Hack}
-    {Einstein Cloud Hackathon}
-    {Multi-Armed Bandit Experimentation}
+    {Einstein Cloud Hackathon | Multi-Armed Bandit Experimentation}
     {2020}
 
   \cvhonor
     {3rd Place}
-    {Facebook Hackathon}
-    {Facebook Reconnect}
+    {Facebook Hackathon | Reconnect with a Friend}
     {2014}
 
   \cvhonor
     {2nd Place}
-    {Intuit Hackathon}
-    {Triton Exchange}
+    {Intuit Hackathon | Tracking University Dining Allowance}
     {2013}
 
   \cvhonor
-    {2nd Place}
-    {Intel ISEF Sweepstakes}
-    {}
-    {2012}
-
-  \cvhonor
     {1st Place}
-    {Greater SD Science and Engineering Fair}
-    {}
+    {San Diego Science and Engineering Fair | Edge-Detection in Autonomous Navigation}
     {2012}
 \end{cvhonors}
